      variables (--arch, --archivedir, --area, --dist, --section and
      LINTIAN_{ARCH,ARCHIVEDIR,AREA,DIST}).
    + [NT] Support new lab query format, replacing the old "package
      name"-based search.

  * lib/Lab{,/Package}.pm:
    + [NT] Removed, replaced by Lintian::Package{,::Entry}.
  * lib/Lintian/Check.pm:
    + [JW] Merged with common_data.pm.
  * lib/Lintian/Collect/Source.pm:
    + [JW] Fixed call to binary_field in binary_relation.
      (Closes: #641609)
  * lib/Lintian/Lab{,/Entry,/Manifest,/ManifestDiff}.pm:
    + [NT] New files.  Replaces the Read_pkglists, Lab and
      Lab::Package modules.
  * lib/Lintian/Lab.pm:
    + [JW,NT] Correctly handle $TMPDIR not being an absolute path.
      (Closes: #642113)
    + [NT] New lab layout style resembling the "pool" dirs of the
      Debian mirrors.  This allows more than 32 000 packages of a
      given type in the laboratory.  It also allows multiple
      versions/architectures of the same package in static labs.
      A feature previously only enabled in temporary labs.  The new
      layout is incompatible with the old format.  (Closes: #641468)
  * lib/Lintian/Output.pm:
    + [NT] Minor refactoring to simplify creation of the FullEWI
      module.
  * lib/Lintian/Output/FullEWI.pm:
    + [NT] New experimental output.  More machine-friendly version
      of the normal Lintian output format.
  * lib/Lintian/Output/XML.pm:
    + [NT] Use self-closing tags (if possible) and do not write
      attributes with an empty value.
  * lib/Lintian/Processable.pm:
    + [NT] Reduced to an abstract class.  The "old" implementation
      has been put into Lintian::Processable::Package.
  * lib/Lintian/Processable/Package.pm:
    + [NT] New file.
    + [NT] Changed the "name" of changes files.  It is now equal to
      the name of the source package.  Previously it was the filename
      (without extension and without the dir part).
  * lib/Read_pkglists.pm: